fix: more contrast for asobo-gray & label for event admin list multiselect

--- a/frontend-angular/src/app/features/events/event-card/event-card.scss
+++ b/frontend-angular/src/app/features/events/event-card/event-card.scss
@@ -39,10 +39,12 @@ $event-card-height: 50vh;
 
 .event-card .date-text {
   font-size: 1.8vh;
+  color: $asobo-gray;
 }
 
 .event-card .location-text {
   font-size: 1.5vh;
+  color: $asobo-gray;
 }
 
 .card-image-container {
