--- a/frontend-angular/src/app/features/events/event-detail-page/event-basic-info/event-basic-info.scss
+++ b/frontend-angular/src/app/features/events/event-detail-page/event-basic-info/event-basic-info.scss
@@ -51,7 +51,7 @@ form.editing textarea:not(.event-title-textarea) {
 }
 
 .date-font-color {
-  color: $grayish-blue;
+  color: $asobo-gray;
 }
 
 #event-date {
